# sdql

./: .gitignore  .scalafmt.conf  README.md  benchmark.sh  build.sbt
LDBC_DataBase/: City.csv  City1.csv  Comment.csv  Country.csv  Person.csv  Post.csv  comment_hasCreator_person.csv  comment_replyOf_post.csv  forum_hasModerator_person.csv  int.csv  person_isLocatedIn_city.csv  post_hasCreator_person.csv
benchmarks/: .gitignore  README.md  __main__.py  benches.py  codegen.sh  compile.sh  connectors.py  enums.py  extractor.py  fj.json  fj_results.csv  gj.json  gj_results.csv  helpers.py  job_gj.py  loaders.py  plot_gf_fj.py  pyproject.toml  q13.py  q21_sdqlpy.cpp  queries.py  readers.py  run.sh  sdqlpy_benchmarks.txt  sdqlpy_utils.py  timer.py  validation.py  wcoj_fj_results.csv  wcoj_results.csv
benchmarks/connectors/: __init__.py  connector.py  duckdb.py  hyper.py  tables.py  timer.py
benchmarks/scripts/: codegen_job.sh  codegen_tpch.sh  compile_job.sh  compile_tpch.sh  run_job.sh  run_tpch.sh
benchmarks/tpch/: README.md  q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q07.sql  q08.sql  q09.sql  q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
benchmarks/tpch/verbatim/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
cpp/: CMakeLists.txt  main.cpp
datasets/: .gitignore
hooks/: pre-push
runtime/: agg_helper.h  bench_helper.h  csv_helper.h  (+11 more)
(+1177 files in other folders)
