[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
pandas = "2.2.2"
numpy = "2.0.0"
duckdb = "1.0.0"
tableauhyperapi = "0.0.19484"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
